--- a/src/main/webapp/views/authenticated/circulationslist.xhtml
+++ b/src/main/webapp/views/authenticated/circulationslist.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="jakarta.faces.facelets"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
 <f:view>
 
@@ -24,7 +24,7 @@
 
 
                 <!---  dataTable for a Circulation List -->
-                <h:dataTable id="cir-dt" value="#{circulationListBacking.circulations}" var="circulation" styleClass="my-table"
+                <h:dataTable id="cir-dt" value="#{circulationListBacking.circulations}" var="circulation" styleClass="my-table table table-bordered"
                              border="2">
 
                     <f:facet name="header">
@@ -36,9 +36,8 @@
                     <h:column rendered="#{circulationListBacking.sessionInfo.admin}">
                         <f:facet name="header">
                             <h:outputText value="Fakultät"/>
-                            <h:inputText value="#{circulationListBacking.filter.facultyId}">
-                                <f:ajax event="keyup" listener="#{circulationListBacking.loadCirculations}"
-                                        render="@form"/>
+                            <h:inputText value="#{circulationListBacking.filter.facultyId}" styleClass="form-control">
+                                <f:ajax event="keyup" listener="#{circulationListBacking.loadCirculations}" render="@form"/>
                             </h:inputText>
                         </f:facet>
                         <h:outputText value="#{circulation.facultyId}"/>
@@ -49,7 +48,7 @@
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="Titel"/>
-                            <h:inputText value="#{circulationListBacking.filter.title}">
+                            <h:inputText value="#{circulationListBacking.filter.title}" styleClass="form-control">
                                 <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="@form"/>
 
                             </h:inputText>
@@ -66,7 +65,7 @@
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="Doktoranden"/>
-                            <h:inputText value="#{circulationListBacking.filter.doctoralCandidateName}">
+                            <h:inputText value="#{circulationListBacking.filter.doctoralCandidateName}" styleClass="form-control">
                                 <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="@form"/>
                             </h:inputText>
                         </f:facet>
@@ -78,7 +77,7 @@
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="Doktorvater"/>
-                            <h:inputText value="#{circulationListBacking.filter.doctoralSupervisor}">
+                            <h:inputText value="#{circulationListBacking.filter.doctoralSupervisor}" styleClass="form-control">
                                 <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="@form"/>
                             </h:inputText>
                         </f:facet>
