--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -8,8 +8,26 @@
     <h:head>
         <title>Header</title>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+        <script type="text/javascript" src="/resources/js/script.js"></script>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                var toggler = document.querySelector('.navbar-toggler');
+                var navMenu = document.querySelector('.navbar-collapse');
+
+                toggler.addEventListener('click', function (event) {
+                    event.preventDefault();
+                    navMenu.classList.toggle('show');
+                });
+            });
+        </script>
+
+
+
+
     </h:head>
     <h:body>
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
                 <h:graphicImage value="/logo/LogoSeite.png" style="max-width: 200px; max-height: 200px;"/>
