--- a/src/main/webapp/views/anonymous/login.xhtml
+++ b/src/main/webapp/views/anonymous/login.xhtml
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="jakarta.faces.html"
-      xmlns:f="jakarta.faces.core"
-      xmlns:ui="jakarta.faces.facelets"
->
-
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head>
     <title>Login</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
 </h:head>
 
 <h:body>
     <ui:include src="header.xhtml" />
+    <div class="container">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-6">
+                <h:form id="login-form">
+                    <h3 class="text-center mb-4">Login</h3>
 
-    <h:form id="login-form">
-        <h3>Login</h3>
+                    <div class="form-group">
+                        <label for="email-itxt">Email:</label>
+                        <h:inputText id="email-itxt" value="#{loginBacking.user.email}" required="true"
+                                     requiredMessage="Bitte geben Sie Ihre E-Mail-Adresse ein." class="form-control"/>
+                        <h:message for="email-itxt" styleClass="text-danger"/>
+                    </div>
 
-        <div>
-            <label for="email-itxt">Email:</label>
-            <h:inputText id="email-itxt" value="#{loginBacking.user.email}" required="true" requiredMessage="Bitte geben Sie Ihre E-Mail-Adresse ein."/>
-            <h:message for="email-itxt" style="color: red;"/>
+                    <div class="form-group">
+                        <label for="password-iscrt">Passwort:</label>
+                        <h:inputSecret id="password-iscrt" value="#{loginBacking.user.password}" required="true"
+                                       requiredMessage="Bitte geben Sie Ihr Passwort ein" class="form-control"/>
+                        <h:message for="password-iscrt" styleClass="text-danger"/>
+                    </div>
+
+                    <div class="text-center">
+                        <h:commandButton value="Anmelden" action="#{loginBacking.login()}"
+                                         styleClass="btn btn-primary"/>
+                    </div>
+
+                    <div class="text-center mt-3">
+                        <h:outputLink value="#" styleClass="text-secondary"
+                                      action="#{loginBacking.forgetPass()}">Passwort vergessen?</h:outputLink>
+                    </div>
+                </h:form>
+                <h:form>
+                    <div class="text-center mt-3">
+                        <h:commandLink action="#{loginBacking.register()}" value="Registrieren"
+                                       styleClass="text-secondary"/>
+                    </div>
+                </h:form>
+            </div>
         </div>
-
-        <div>
-            <label for="password-iscrt">Passwort:</label>
-            <h:inputSecret id="password-iscrt" value="#{loginBacking.user.password}" required="true" requiredMessage="Bitte geben Sie Ihr Passwort ein"/>
-            <h:message for="password-iscrt" style="color: red;"/>
-        </div>
-
-        <div>
-            <h:commandLink value="Passwort vergessen?" action="#{loginBacking.forgetPass()}" />
-        </div>
-
-        <div>
-            <h:commandButton value="Anmelden" action="#{loginBacking.login()}"/>
-        </div>
-    </h:form>
-
-    <h:form>
-        <div>
-            <h:commandButton value="Registrieren" action="#{loginBacking.register()}" />
-
-        </div>
-
-    </h:form>
+    </div>
 </h:body>
 
 </html>
